# token_hub

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  README.zh-CN.md  biome.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
crates/token_proxy_account_codex/: Cargo.toml
crates/token_proxy_account_codex/src/: agent_identity.rs  error.rs  identity.rs  lib.rs  login.rs  oauth.rs  persistence.rs  quota.rs  store.rs  types.rs
crates/token_proxy_account_kiro/: Cargo.toml
crates/token_proxy_account_kiro/src/: callback.rs  lib.rs  login.rs  oauth.rs  persistence.rs  quota.rs  sso_oidc.rs  store.rs  types.rs  util.rs
crates/token_proxy_account_store/: Cargo.toml
crates/token_proxy_account_store/src/: app_proxy.rs  database.rs  lib.rs  oauth_util.rs  paths.rs  records.rs
crates/token_proxy_account_xai/: Cargo.toml
crates/token_proxy_account_xai/src/: error.rs  lib.rs  login.rs  oauth.rs  persistence.rs  quota.rs  store.rs
crates/token_proxy_accounts/: Cargo.toml
crates/token_proxy_accounts/src/: lib.rs  provider_accounts.rs
crates/token_proxy_agent_node/: Cargo.toml
crates/token_proxy_agent_node/src/: lib.rs
crates/token_proxy_app/: Cargo.toml
crates/token_proxy_app/resources/: model-pricing.json
crates/token_proxy_app/src/: app.rs  lib.rs  logging.rs  pricing_refresh.rs  storage_usage.rs
crates/token_proxy_app/src/proxy/: cooldown_scope.rs  gemini.rs  log.rs  logs.rs  mod.rs  model.rs  model_discovery.rs  openai.rs  pricing.rs  redact.rs  sqlite.rs  tool_identity.rs
crates/token_proxy_app/src/proxy/account_selector/: mod.rs
crates/token_proxy_app/src/proxy/anthropic_compat/: mod.rs  request.rs  response.rs  tests.rs  tools.rs
crates/token_proxy_app/src/proxy/codex_compat/: namespace.rs  request.rs  response.rs  tests.rs
crates/token_proxy_app/src/proxy/dashboard/: mod.rs  tests.rs
crates/token_proxy_app/src/proxy/gemini_compat/: request.test.rs  response.rs  response.test.rs  stream.rs
crates/token_proxy_app/src/proxy/kiro/: constants.rs  endpoint.rs  model.rs
crates/token_proxy_app/src/proxy/openai_compat/: images.rs  message.rs  mod.rs  tests.rs  tests_part1.rs  tests_part2.rs  tests_part3.rs  usage.rs
crates/token_proxy_app/src/proxy/request_body/: mod.rs  tests.rs
crates/token_proxy_app/src/proxy/response/: anthropic_to_responses.rs  kiro_to_anthropic.rs  kiro_to_responses.rs  responses_error.rs  responses_failure.rs  responses_to_anthropic.rs  streaming.rs  upstream_read.rs  upstream_stream.rs
crates/token_proxy_app/src/proxy/server/: bootstrap.rs  dispatch.rs  execute.rs  inbound.rs  mod.rs  prepared.rs  tests.rs
crates/token_proxy_app/src/proxy/server_helpers/: mod.rs
crates/token_proxy_app/src/proxy/service/: mod.rs  tests.rs
crates/token_proxy_app/src/proxy/upstream/: attempt.rs  catalog.rs  dispatch.rs  kiro.rs  kiro_headers.rs  kiro_http.rs  kiro_prepare.rs  kiro_result.rs  prepare.rs  request.rs  request.test.rs  request_body.rs  request_body.test.rs  result.rs  result.test.rs  tests.rs  transport.rs  utils.rs
crates/token_proxy_app/src/proxy/upstream_selector/: tests.rs
crates/token_proxy_app/src/proxy/usage/: mod.rs  tests.rs
crates/token_proxy_cli/: Cargo.toml
crates/token_proxy_cli/src/: main.rs
crates/token_proxy_config/: Cargo.toml
crates/token_proxy_config/src/: hot_model_mappings.rs  hot_model_mappings.test.rs  io.rs  io.test.rs  jsonc.rs  lib.rs  migrate.rs  migrate.test.rs  mod.test.rs  model_mapping.rs  model_mapping.test.rs  normalize.rs  types.rs  types.test.rs
crates/token_proxy_core/: Cargo.toml
crates/token_proxy_core/src/: lib.rs  oauth_util.rs  provider_accounts.rs  storage_usage.rs
crates/token_proxy_core/src/agent_node/: mod.rs
crates/token_proxy_core/src/codex/: login.rs  store.rs  types.rs
crates/token_proxy_core/src/kiro/: sso_oidc.rs  store.rs
crates/token_proxy_core/src/proxy/: codex_models_manifest.rs  codex_tool_types.rs  http_client.rs  log.rs  logs.rs  mod.rs  pricing.rs  request_detail.rs  sqlite.rs  sse.rs
crates/token_proxy_core/src/proxy/anthropic_compat/: request.rs  tests.rs
crates/token_proxy_core/src/proxy/codex_compat/: mod.rs  namespace.rs  request.rs  stream.rs  tests.rs  tool_names.rs
crates/token_proxy_core/src/proxy/config/: hot_model_mappings.rs  hot_model_mappings.test.rs  mod.rs  mod.test.rs  normalize.rs  types.rs
crates/token_proxy_core/src/proxy/dashboard/: mod.rs  tests.rs
crates/token_proxy_core/src/proxy/gemini_compat/: mod.rs  tools.rs
crates/token_proxy_core/src/proxy/http/: mod.rs  tests.rs
crates/token_proxy_core/src/proxy/openai_compat/: input.rs  mod.rs  tests_part1.rs  tests_part2.rs  tools.rs
crates/token_proxy_core/src/proxy/response/: mod.rs  responses_error.rs  responses_to_anthropic.rs  responses_to_chat.rs  sequence.rs  streaming.rs  tests.rs  tests_part2.rs
crates/token_proxy_core/src/proxy/server/: dispatch.rs  inbound.rs  mod.rs  tests.rs
crates/token_proxy_core/src/proxy/server_helpers/: mod.rs  tests.rs
crates/token_proxy_core/src/proxy/service/: mod.rs  tests.rs
crates/token_proxy_core/src/proxy/upstream/: attempt.rs  catalog.rs  dispatch.rs  dispatch.test.rs  kiro.rs  kiro_http.rs  mod.rs  prepare.rs  request_body.rs  request_body.test.rs  result.rs  (+7 more)
crates/token_proxy_core/src/xai/: login.rs  mod.rs  quota.rs  store.rs  types.rs
crates/token_proxy_storage/: Cargo.toml
crates/token_proxy_storage/src/: lib.rs  log.rs  logs.rs  pricing.rs  sqlite.rs
crates/token_proxy_storage/src/dashboard/: mod.rs  tests.rs
crates/token_proxy_storage/src/sqlite/: usage_backfill.rs
crates/token_proxy_storage/src/usage/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/src/: agent_node_service.rs  app_proxy.rs  client_config.rs  lib.rs  logging.rs  proxy.rs  tray.rs  window.rs
src-tauri/src/codex/: mod.rs
src-tauri/src/commands/: agent_node.rs  config.rs  dashboard.rs  logs.rs  mod.rs  pricing.rs  providers.rs  proxy.rs  xai.rs
src-tauri/src/kiro/: mod.rs
src-tauri/src/xai/: mod.rs
(+284 files in other folders)
