[package]
name = "token_proxy"
version = "0.1.133"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "token_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
axum = "0.8.8"
futures-util = "0.3.32"
base64 = "0.22"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "stream",
    "form",
    "rustls",
    "socks",
] }
sha2 = "0.10"
sysinfo = "0.38"
tauri = { version = "2.10.3", features = ["image-png", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1.50.0", features = [
    "fs",
    "io-util",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
time = { version = "0.3", features = ["formatting", "parsing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tiktoken-rs = "0.9.1"
toml_edit = "0.25"
url = "2.5.8"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
token_proxy_core = { path = "../crates/token_proxy_core" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
