[package]
name = "token_proxy_account_kiro"
version = "0.1.0"
edition = "2021"

[features]
test-support = []

[dependencies]
token_proxy_account_store = { path = "../token_proxy_account_store" }
axum = "0.8.9"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls", "socks", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.151"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.53", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
url = "2.5.8"

[dev-dependencies]
rand = "0.10"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
