[package]
name = "token_proxy_agent_node"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.33"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53", features = ["fs", "io-util", "process", "sync", "time"] }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-native-roots"] }
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
url = "2.5.8"
