[package]
name = "token_proxy_app"
version = "0.1.0"
edition = "2021"

[dependencies]
token_proxy_account_codex = { path = "../token_proxy_account_codex" }
token_proxy_account_kiro = { path = "../token_proxy_account_kiro" }
token_proxy_account_store = { path = "../token_proxy_account_store" }
token_proxy_account_xai = { path = "../token_proxy_account_xai" }
token_proxy_config = { path = "../token_proxy_config" }
token_proxy_runtime = { path = "../token_proxy_runtime" }
token_proxy_storage = { path = "../token_proxy_storage" }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "socks", "http2"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.53", features = ["sync"] }
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
