[package]
name = "token_proxy_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "token-proxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.53", features = ["rt-multi-thread", "signal"] }
token_proxy_core = { path = "../token_proxy_core" }

