[package]
name = "token_proxy_core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
base64 = "0.22"
futures-util = "0.3.33"
portable-pty = "0.9.0"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
  "form",
  "rustls",
  "socks",
  "http2",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.151"
serde_urlencoded = "0.7"
sha2 = "0.11"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
sysinfo = "0.39"
tiktoken-rs = "0.12"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.53", features = ["fs", "io-util", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-native-roots"] }
toml_edit = "0.25"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
h2 = "0.4"
httparse = "1"
