[package]
name = "token_proxy_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
token_proxy_protocol = { path = "../token_proxy_protocol" }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.53", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
